--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,12 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
+# ================================================ frontend ===============================================
+
 # dependencies
 /frontend/node_modules
 /frontend/.pnp
 /frontend/.pnp.js
+/frontend/package-lock.json
 
 # testing
 /frontend/coverage
@@ -29,6 +32,7 @@
 /backend/node_modules
 /backend/.pnp
 /backend/.pnp.js
+/backend/package-lock.json
 
 # testing
 /backend/coverage
