--- a/backend/package.json
+++ b/backend/package.json
@@ -5,7 +5,7 @@
   "type": "module",
   "scripts": {
     "start": "nodemon --exec node --no-warnings=ExperimentalWarning --loader ts-node/esm src/index.ts",
-    "test": "node --test --no-warnings=ExperimentalWarning --loader ts-node/esm test/index.ts"
+    "e2e": "cross-env DOTENV_CONFIG_PATH=.env.e2e nodemon --exec node --no-warnings=ExperimentalWarning --loader ts-node/esm src/index.ts"
   },
   "keywords": [],
   "author": "Md Saquib Hayat",
@@ -15,6 +15,7 @@
     "bcryptjs": "^2.4.3",
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
+    "cross-env": "^7.0.3",
     "dotenv": "^16.4.5",
     "express": "^4.21.0",
     "express-validator": "^7.2.0",
