--- a/backend/package.json
+++ b/backend/package.json
@@ -4,7 +4,9 @@
   "main": "src/index.ts",
   "type": "module",
   "scripts": {
-    "start": "nodemon --exec node --no-warnings=ExperimentalWarning --loader ts-node/esm src/index.ts",
+    "build": "npm install && npx tsc",
+    "start": "node ./dist/index.js",
+    "dev": "nodemon --exec node --no-warnings=ExperimentalWarning --loader ts-node/esm src/index.ts",
     "e2e": "cross-env DOTENV_CONFIG_PATH=.env.e2e nodemon --exec node --no-warnings=ExperimentalWarning --loader ts-node/esm src/index.ts"
   },
   "keywords": [],
@@ -27,7 +29,7 @@
     "@types/bcryptjs": "^2.4.6",
     "@types/cookie-parser": "^1.4.7",
     "@types/cors": "^2.8.17",
-    "@types/express": "^5.0.0",
+    "@types/express": "^4.17.21",
     "@types/jsonwebtoken": "^9.0.7",
     "@types/node": "^22.7.4",
     "nodemon": "^3.1.7",
